Mobile preliminary version

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -23,45 +23,11 @@ $blue600: #1a73e8;
 // $blue800: #185abc;
 $blue900: #174ea6;
 
-// $green50: #e6f4ea;
-// $green100: #ceead6;
-// $green200: #a8dab5;
-// $green300: #81c995;
-// $green400: #5bb974;
-// $green500: #34a853;
-// $green600: #1e8e3e;
-// $green700: #188038;
-// $green800: #137333;
-// $green900: #0d652d;
-
-// $red50: #fce8e6;
-// $red100: #fad2cf;
-// $red200: #f6aea9;
-// $red300: #f28b82;
-// $red400: #ee675c;
-// $red500: #ea4335;
-// $red600: #d93025;
-// $red700: #c5221f;
-// $red800: #b31412;
-// $red900: #a50e0e;
-
-// $yellow50: #fef7e0;
-// $yellow100: #feefc3;
-// $yellow200: #fde293;
-// $yellow300: #fdd663;
-// $yellow400: #fcc934;
-// $yellow500: #fbbc04;
-// $yellow600: #f9ab00;
-// $yellow700: #f29900;
-// $yellow800: #ea8600;
-// $yellow900: #e37400;
-
-// $purple900: #681da8;
-
 $black: #000;
 $geomagical: #3cba54;
 $recommendations: #fbbc05;
 $recap: $blue500;
+$border-color: #ccc;
 
 $font-weight-lighter: lighter;
 $font-weight-light: 300;
