--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -9,4 +9,9 @@
 @import 'platforms';
 @import 'pulsar-btn';
 @import 'radio-check';
+@import 'step-card';
+@import 'steps-overlay';
+@import 'tech';
 @import 'tooltip';
+@import 'navigation';
+@import 'navigation-mobile';
