--- a/src/scss/components/_pulsar-btn.scss
+++ b/src/scss/components/_pulsar-btn.scss
@@ -136,7 +136,7 @@
     }
 
     .pulsar-btn__label {
-      color: $recommendations;
+      color: #e3b309;
     }
 
     @include media-breakpoint-up(md) {
