--- a/src/scss/components/_text-wrap.scss
+++ b/src/scss/components/_text-wrap.scss
@@ -1,4 +1,5 @@
 .text-wrap {
+  position: relative;
   width: 100%;
  
   &--half {
@@ -7,13 +8,13 @@
     height: 100%;
     align-items: center;
     flex-direction: column;
-    justify-content: center;    
    
     @include media-breakpoint-up(md) {
       position: absolute;
       top: 0;
       right: 6vw;
       width: calc(60vw - 6vw);
+      justify-content: center; 
     }
 
     @include media-breakpoint-up(lg) {
