--- a/src/scss/layout/_app-global-navbar.scss
+++ b/src/scss/layout/_app-global-navbar.scss
@@ -1,5 +1,5 @@
 .app-global-navbar {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   display: flex;
@@ -13,6 +13,10 @@
   background: #fff;
   padding: 8px 16px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+
+  @include media-breakpoint-up(md) {
+    position: fixed;
+  }
 
   &__title {
     white-space: nowrap;
