--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -7,21 +7,22 @@ body {
   background-size: cover;
   background-attachment: fixed;
 
-  @include media-breakpoint-down(sm) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: $black;
+  // Mobile Under Construction
+  // @include media-breakpoint-down(sm) {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  //   background: $black;
 
-    &::before {
-      content: 'Under construction';
-      font-size: 24px;
-      color: $white;
-      text-align: center;
-    }
+  //   &::before {
+  //     content: 'Under construction';
+  //     font-size: 24px;
+  //     color: $white;
+  //     text-align: center;
+  //   }
 
-    .site-wrap {
-      display: none !important;
-    }
-  }
+  //   .site-wrap {
+  //     display: none !important;
+  //   }
+  // }
 }
