--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -1,7 +1,6 @@
 @import 'body';
 @import 'app-global-navbar';
-//@import 'splash';
 @import 'site';
 @import 'section';
 @import 'stage';
-@import 'navigation';
+@import 'stage-mobile';
