--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -11,7 +11,7 @@
     left: 0;
     display: none;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
 
     &.active {
       display: block;
@@ -23,10 +23,6 @@
       pointer-events: auto;
     }
 
-    @include media-breakpoint-up(md) {
-      height: 100%;
-    }
-
     .home-btn {
       position: absolute;
       top: 20px;
@@ -35,12 +31,19 @@
     }
 
     .container-fluid {
-      height: 100%;
-
       @include media-breakpoint-down(sm) {
-        padding-right: 30px;
-        padding-left: 30px;
+        height: 100%;
+        padding: 30px 28px;
+        overflow: auto;
       }
+
+      @media (max-width: 320px) {
+        padding: 20px 15px;
+      }
+
+      @include media-breakpoint-up(md) {
+        height: 100%;
+      }      
     }
   }
 }
