--- a/ikea/src/scss/components/_navigation.scss
+++ b/ikea/src/scss/components/_navigation.scss
@@ -51,6 +51,12 @@
     &--white {
       color: $white; 
     }
+
+    &--only-text {
+      img {
+        opacity: 0;
+      }
+    }    
   }  
 }
 
