--- a/ikea/src/scss/sections/_stages.scss
+++ b/ikea/src/scss/sections/_stages.scss
@@ -44,9 +44,7 @@
       }
 
       &--only-text {
-        img {
-          opacity: 0;
-        }
+        transform: translateY(70px);
       }
     }
   }
