--- a/ikea/src/scss/sections/_stages.scss
+++ b/ikea/src/scss/sections/_stages.scss
@@ -6,7 +6,7 @@
   .home-btn {
     position: absolute;
     top: 20px;
-    right: 20px;
+    left: 20px;
     z-index: 1;
         
     // Initial State
