--- a/ikea/public/css/main.css
+++ b/ikea/public/css/main.css
@@ -4015,8 +4015,16 @@ button:focus {
   background-color: #fff;
   border-radius: 24px;
   box-shadow: 2px 4px 12px 0 rgba(0, 0, 0, 0.2); }
+  .home-btn svg,
   .home-btn .icon-home {
     transition: all 450ms ease-in-out; }
+  .home-btn span {
+    position: absolute;
+    top: 12px;
+    left: 70px;
+    white-space: nowrap;
+    font-size: 0.875rem;
+    color: #fff; }
   .home-btn--intro .icon-home {
     fill: #4285f4; }
   .home-btn--geomagical .icon-home {
@@ -4030,7 +4038,9 @@ button:focus {
       transition-duration: 700ms;
       transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
       .home-btn:hover {
-        transform: scale(1.2) !important; } }
+        box-shadow: 2px 4px 12px 0 rgba(0, 0, 0, 0.4); }
+        .home-btn:hover svg {
+          transform: scale(1.2) !important; } }
 
 .house {
   position: absolute;
@@ -5587,7 +5597,7 @@ body {
 .section--stages .home-btn {
   position: absolute;
   top: 20px;
-  right: 20px;
+  left: 20px;
   z-index: 1;
   opacity: 0;
   transform: scale(0.5);
