--- a/ikea/public/css/main.css
+++ b/ikea/public/css/main.css
@@ -5152,6 +5152,10 @@ button:focus {
   background: #fff;
   padding: 8px 16px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); }
+  @media (min-width: 600px) {
+    .app-global-navbar {
+      padding-left: 28px;
+      padding-right: 28px; } }
   @media (min-width: 1024px) {
     .app-global-navbar {
       position: fixed; } }
