--- a/ikea/src/scss/layout/_app-global-navbar.scss
+++ b/ikea/src/scss/layout/_app-global-navbar.scss
@@ -14,6 +14,11 @@
   padding: 8px 16px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
+  @include media-breakpoint-up(sm) {
+    padding-left: 28px; 
+    padding-right: 28px;
+  }
+  
   @include media-breakpoint-up(md) {
     position: fixed;
   }
